--- a/answers/answer05/index.html
+++ b/answers/answer05/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <p>
-        <a href="http://127.0.0.1:5500/answers/answer05/index.html" id="working-link">Working Link</a>
+        <a href="/answers/answer05/index.html" id="working-link">Working Link</a>
         <br>
-        <a href="http://127.0.0.1:5500/answers/answer05/index.html/500" id="broken-link">Broken Link</a> 
+        <a href="/answers/answer05/index.html/500" id="broken-link">Broken Link</a> 
         <br>
      
     
